Android-vcard: Java vCard library

version 1.2 (2010-02-12)
    * moved project to a custom namespace (issue #2)

version 1.1 (2009-11-30):
    * synchronized with new upstream code
    * fixed issue #1

version 1.0 (2009-07-03):
    * initial release