@@ -1,5 +1,9 @@
 Android-vcard: Java vCard library
 
+version ??
+    * patched to handle LANGUAGE codes properly - it crashed on vcards from 
+      MS Outlook (issue #3)
+
 version 1.2 (2010-02-12)
     * moved project to a custom namespace (issue #2)
 
